--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,9 @@
 
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/roboto/Roboto-Regular.ttf');
+}
+
 @import '~vue-awesome-notifications/dist/styles/style.scss';
 @import "theme/chart.scss";
 @import "theme/theme.scss";
